--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -12,3 +12,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+server:
+  port: 8081
+#PRODUCT:
+  #ribbon:
+   # NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
