--- a/order/pom.xml
+++ b/order/pom.xml
@@ -57,17 +57,15 @@
             <artifactId>gson</artifactId>
         </dependency>
 
-  <!--      <dependency>
+        <!--注意该版本号问题 大坑-->
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
-         </dependency>-->
+            <version>2.0.0.M1</version>
+        </dependency>
 
-        <!--<dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-         </dependency>-->
 
-    </dependencies>
+   </dependencies>
 
     <dependencyManagement>
         <dependencies>
